gitops/apps/environments/staging/patches/wallabag/wallabag-vault-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
spec:
  template:
    spec:
      containers:
        - name: wallabag
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
